# ingrid-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile-golang  Dockerfile-python  Dockerfile-rust  LICENSE  Makefile  README.md  cargo.toml  docker-compose.storages.yml  docker-compose.yml  dummy.rs  go.mod  main.go  main.py  requirements.txt  service-account-file.json
cmd/: authn.go  provider_discovery.go  providers.go  root.go  server.go
src/: main.rs
src/services/authn/: authn.go
src/services/provider_discovery/: provider_discovery.go
src/services/providers/extensions-api/: Cargo.toml
src/services/providers/extensions-api/src/: github.rs  main.rs
src/services/providers/go/: providers.go
src/services/providers/python/: fetch_git_data.py  fetch_lab_data.py  fetch_lingo_data.py  server.py
src/services/providers/rust/: server.rs
src/services/providers/rust/server/: github.rs
src/services/server/node/: .dockerignore  Dockerfile-node  README.md  package-lock.json  package.json
src/services/server/node/src/: index.ts
src/services/server/node/src/middleware/: validation.ts
src/services/server/node/src/resolvers/: auth.resolver.ts  user.resolver.ts
src/services/server/node/src/services/: db.service.ts  extension.service.ts
src/services/server/node/src/types/: context.types.ts  user.types.ts
src/services/server/rust/: server.rs
